<resources>
    <string name="app_name">DesighKotlin</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="label_inside_activity">Выберете тему</string>
    <string name="theme_one">First</string>
    <string name="theme_second">Second</string>
    <string name="label_inside_fragment">Выберете тему</string>
    <string name="venus">Венера</string>
    <string name="mars">Марс</string>
    <string name="earth">Земля</string>
    <string name="song">All i need is a love tonight</string>
    <string name="first_screen">Первый экран</string>
    <string name="animation">Анимация</string>
    <string name="change_focus">Изменить размер</string>
    <string name="second_screen">Второй экран</string>
    <string name="list">Список</string>
    <string name="write_new_deal">Впишите новое дело</string>
    <string name="title">Заголовок</string>
    <string name="dealTitle">Дела</string>

</resources>