<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMarginRowContent"
        android:layout_marginTop="@dimen/topMarginRowContent"
        android:layout_marginEnd="@dimen/endMarginRowContent"
        android:orientation="horizontal">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsSnake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/startMarginRowContent"
            android:layout_marginTop="@dimen/topMarginRowContent"
            android:layout_marginEnd="@dimen/endMarginRowContent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab 1" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab 2" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab 3" />
        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMarginRowContent"
        android:layout_marginTop="@dimen/topMarginRowContent"
        android:layout_marginEnd="@dimen/endMarginRowContent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="default" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:text="outlined" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:text="outlined" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMarginRowContent"
        android:layout_marginTop="@dimen/topMarginRowContent"
        android:layout_marginEnd="@dimen/endMarginRowContent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unelevated" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unelevated" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unelevated" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMarginRowContent"
        android:layout_marginTop="@dimen/topMarginRowContent"
        android:layout_marginEnd="@dimen/endMarginRowContent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMarginRowContent"
        android:layout_marginTop="@dimen/topMarginRowContent"
        android:layout_marginEnd="@dimen/endMarginRowContent"
        android:layout_marginBottom="@dimen/topMarginRowContent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_bottom_navigation" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_inside_fragment"
        android:textSize="@dimen/labelTextSize" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnThemeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_one" />

        <RadioButton
            android:id="@+id/btnThemeSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_second" />
    </RadioGroup>

</LinearLayout>